[package]
name = "bgpd"
version = "0.1.0"
edition = "2021"
description = "RFC 4271 BGP-4 daemon that programs routes via ribd"
license = "AGPL-3.0-or-later"
authors = ["Justin Thomas"]

[dependencies]
ribd-proto = { git = "https://github.com/justindthomas/ribd" }
ribd-client = { git = "https://github.com/justindthomas/ribd" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
anyhow = "1"
ipnet = "2"
nix = { version = "0.29", features = ["net", "socket"] }
libc = "0.2"
async-trait = "0.1"
vcl-rs = { git = "https://github.com/justindthomas/vcl-rs", optional = true }

[features]
default = []
vcl = ["dep:vcl-rs"]

[dev-dependencies]
tempfile = "3"
ribd-proto = { git = "https://github.com/justindthomas/ribd" }

[lib]
name = "bgpd"
path = "src/lib.rs"

[[bin]]
name = "bgpd"
path = "src/main.rs"

# Local development overrides: if the sibling repos are checked out
# alongside this one (../ribd, ../vcl-rs), use them in place of the
# git sources above. Harmless to anyone cloning just this repo —
# Cargo only consults `[patch]` entries whose paths resolve locally.
[patch."https://github.com/justindthomas/ribd"]
ribd-proto = { path = "../ribd/ribd-proto" }
ribd-client = { path = "../ribd/ribd-client" }

[patch."https://github.com/justindthomas/vcl-rs"]
vcl-rs = { path = "../vcl-rs" }
